fix: adjust learning block spacing

--- a/src/assets/styles/base/_typography.scss
+++ b/src/assets/styles/base/_typography.scss
@@ -113,7 +113,7 @@ ol[role="list"] {
 
 .content {
     * + * {
-        margin-top: var(--scale-2);
+        margin-top: var(--scale-0);
     }
 
     * + h2,
